--- a/normalize.ipynb
+++ b/normalize.ipynb
@@ -851,8 +851,8 @@
     "mean_age = data_frame[\"Edad\"].mean().__round__(0)\n",
     "data_frame[\"Edad\"] = pd.to_numeric(data_frame[\"Edad\"].fillna(mean_age))\n",
     "\n",
-    "mean_age = data_frame[\"Altura\"].mean().__round__(2)\n",
-    "data_frame[\"Altura\"] = data_frame[\"Altura\"].fillna(mean_age)\n",
+    "mean_height = data_frame[\"Altura\"].mean().__round__(2)\n",
+    "data_frame[\"Altura\"] = data_frame[\"Altura\"].fillna(mean_height)\n",
     "\n",
     "data_frame"
    ]
